*refs #2300: fixed the zenoss.css to move the search form label to the left so it no longer overlaps
git-svn-id: http://dev.zenoss.com/svnint/trunk/core@20881 f5df01ce-0320-0410-9ed9-ddcd13c732cc

--- a/Products/ZenModel/skins/zenmodel/zenoss.css
+++ b/Products/ZenModel/skins/zenmodel/zenoss.css
@@ -164,7 +164,8 @@ div.logo {
 
 span.searchform-label {
     position:relative;
-    left:-5em;
+    display:block;
+    left:-6em;
     font-size:80%;
     top:2px;
     color:#bbb;
